force-app/main/default/objects/Related_Party__c/Related_Party__c.object-meta.xml
<CustomObject>
    <description>Digitization: Onboarding - This Junction Object holds the links to either a natural person (Contact) and / or juristic entity (Account) for a specific client</description>
    <label>Related Party</label>
    <nameField>
        <displayFormat>RP-{0000000000}</displayFormat>
        <label>Related Party Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Parties</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>