force-app/main/default/objects/Related_Party__c/fields/Account_Application__c.field-meta.xml
<CustomField>
    <fullName>Account_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Application</label>
    <referenceTo>Account_Application__c</referenceTo>
    <relationshipLabel>Related Parties</relationshipLabel>
    <relationshipName>Related_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>