force-app/main/default/objects/Related_Party__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Digitization - Account Opening - the type of change requested by the client on a related party. The client can ask for one to be added; removed or they can modify information of an existing related party.</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADD</fullName>
            </value>
            <value>
                <fullName>REMOVE</fullName>
            </value>
            <value>
                <fullName>MODIFY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>