force-app/main/default/objects/Related_Party__c/fields/GoldTier_Id__c.field-meta.xml
<CustomField>
    <fullName>GoldTier_Id__c</fullName>
    <externalId>true</externalId>
    <label>GoldTier Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>