force-app/main/default/objects/Related_Party__c/fields/Head_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Head_Office_Address__c</fullName>
    <label>Head Office Address</label>
    <type>TextArea</type>
</CustomField>