force-app/main/default/objects/Related_Party__c/fields/Registered_Address__c.field-meta.xml
<CustomField>
    <fullName>Registered_Address__c</fullName>
    <label>Registered Address</label>
    <type>TextArea</type>
</CustomField>