force-app/main/default/objects/Related_Party__c/fields/Shareholding_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Shareholding_Percentage__c</fullName>
    <label>Shareholding Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>